Changed background color on styling-update branch

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #fffdfd;
+  background-color: #e6f7ff;
   margin: 0;
   padding: 0;
 }
